@startuml app-config-persistence
allowmixing
!theme plain
skinparam backgroundColor #FEFEFE
skinparam defaultFontSize 11
skinparam arrowThickness 1.5

title Config Persistence Collaboration

legend right
  |= Module |= Color |= Description |
  | :app | <#E3F2FD> | App layer |
  | :ui | <#E8F5E9> | UI layer |
  | :engine | <#FFF3E0> | Engine layer |
  | Settings Change | <#FFF9C4> | Settings change path |
  | Log Config | <#F3E5F5> | Log config path |
endlegend

' ===== :engine =====
package ":engine" #FFF3E0 {
  class ImeConfig <<(D,#FFF3E0)>> {
    + engine: EngineConfig
    + ui: UiConfig
    + runtime: RuntimeConfig
  }
  class ImeEngine <<(C,#FFF3E0)>> {
    + updateConfig(block)
    + state: StateFlow<ImeState>
  }
  note right of ImeConfig
    RuntimeConfig is not persisted,
    Reinitialized on app restart via StartupConfig
  end note
}

' ===== :ui =====
package ":ui" #E8F5E9 {
  class KeyboardViewModel <<(C,#E8F5E9)>> {
    + state: StateFlow<ImeState>
    + config: ImeConfig
    + updateConfig(transform)
    + setKeyboardLayoutMode(mode)
  }
  class KeyboardHost <<(C,#E8F5E9)>> {
    Subscribes viewModel.state
    Subscribes viewModel.layoutMode
  }
  note right of KeyboardViewModel
    **updateConfig() modifies runtime only**
    Does not persist
    Delegates to engine.updateConfig()
    UI auto-syncs via ImeState.config
  end note
}

' ===== :app =====
package ":app" #E3F2FD {
  class ConfigDataStore <<(C,#E3F2FD)>> {
    - context: Context
    + config: Flow<ImeConfig>
    + updateConfig(transform)
    --
    Persists EngineConfig:
      keyboardType (→ Keyboard.type), keyboardHandMode,
      candidatePredictionEnabled, singleLineInput
    Persists UiConfig:
      keyboardThemeType, audioFeedback,
      hapticFeedback, keyAnimation, keyPopupTips,
      gestureSlippingTrail, clipPopupTips,
      logLevel, logStoragePath, ...
  }
  class IMEService <<(C,#E3F2FD)>> {
    + onCreate()
    + onCreateInputView(): View
  }
  class SettingsScreen <<(C,#E3F2FD)>> {
    Settings page
  }
  class QuickSettingsPopup <<(C,#E3F2FD)>> {
    In-keyboard quick settings
  }
  class ImeLog <<(O,#E3F2FD)>> {
    + updateLevel(newLevel)
  }
  class LogStorage <<(C,#E3F2FD)>> {
    + updateDir(logDir)
  }
}

' ===== Config Change Dual Path =====

rectangle "Settings Page Change\n(Persist + Runtime)" #FFF9C4 {
  SettingsScreen --> ConfigDataStore : updateConfig\n(persist to DataStore)
  SettingsScreen --> KeyboardViewModel : updateConfig\n(modify runtime config)
}

rectangle "Quick Settings Change\n(Runtime Only)" #E8F5E9 {
  QuickSettingsPopup --> KeyboardViewModel : updateConfig\n(runtime only)
}

note right of QuickSettingsPopup
  Temporary changes via QuickSettingsPopup
  and other keyboard UI only call
  viewModel.updateConfig()
  Do not write to DataStore
end note

' ===== Collaboration Relationships =====
IMEService --> ImeEngine : create\nImeEngine.create(config)
IMEService --> KeyboardViewModel : Factory(engine)
IMEService --> ConfigDataStore : read initial config

KeyboardViewModel --> ImeEngine : updateConfig()
ImeEngine --> ImeConfig : runtime modifications
ImeEngine --> ImeState : state.config auto-sync

ConfigDataStore --> ImeConfig : read/restore
KeyboardHost --> KeyboardViewModel : collectAsState()

' ===== Log Config Special Path =====
rectangle "Log Level Change\n(Persist + Runtime)" #F3E5F5 {
  ConfigDataStore --> ImeLog : updateLevel(newLevel)
}

rectangle "Log Path Change\n(Persist + Runtime)" #F3E5F5 {
  ConfigDataStore --> LogStorage : updateDir(newDir)
}

' ===== Flow Description =====
note bottom
  **Config Change Dual Path**

  1. Settings page → executes both:
     - ConfigDataStore.updateConfig() (persist)
     - viewModel.updateConfig() (runtime, triggers UI update)

  2. Quick settings → executes only:
     - viewModel.updateConfig() (runtime)
     - Does not write to DataStore

  3. RuntimeConfig not persisted:
     - Runtime config (screen orientation, editor type, tool button state, etc.) not persisted
     - Reinitialized on restart via StartupConfig

  4. Log config special:
     - logLevel change → ImeLog.updateLevel() (immediate effect)
     - logStoragePath change → LogStorage.updateDir() (switch directory)
end note

@enduml
